updated function showLatex, made a general norm calculation function

--- a/dz1/task1.ipynb
+++ b/dz1/task1.ipynb
@@ -7,44 +7,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import sympy as sp\n",
-    "from IPython.display import display, Math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "d44aed41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def showLatex(a):\n",
-    "    display(Math(sp.latex(a)))\n",
-    "\n",
-    "def calculateNormMatr(a: sp.Matrix):\n",
-    "    sums = []\n",
-    "    for i in range(3):\n",
-    "        sum = 0\n",
-    "        for j in range(3):\n",
-    "            sum += sp.Abs(a[i, j])\n",
-    "        sums.append(sum)\n",
-    "    return max(sums)\n",
-    "\n",
-    "def calculateNormVec(a: sp.Array):\n",
-    "    return max(a)\n"
+    "from IPython.display import display, Math\n",
+    "from typing import overload, Union"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d44aed41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showLatex(a, makeLatexCodeVisible = False, strBeforeEq = ''):\n",
+    "    if makeLatexCodeVisible:\n",
+    "        display(strBeforeEq + sp.latex(a))\n",
+    "    display(Math(fr'{strBeforeEq}{sp.latex(a)}'))\n",
+    "\n",
+    "@overload\n",
+    "def calculateChebyshevsNorm(a: sp.Matrix) -> float: ...\n",
+    "\n",
+    "@overload\n",
+    "def calculateChebyshevsNorm(a: sp.Array) -> float: ...\n",
+    "\n",
+    "def calculateChebyshevsNorm(a: Union[sp.Matrix, sp.Array]) -> float:\n",
+    "    if isinstance(a, sp.Matrix):\n",
+    "        sums = []\n",
+    "        for i in range(a.rows):\n",
+    "            row_sum = 0\n",
+    "            for j in range(a.cols):\n",
+    "                row_sum += abs(a[i, j])\n",
+    "            sums.append(row_sum)\n",
+    "        return max(sums)\n",
+    "    elif isinstance(a, sp.Array):\n",
+    "        return max(a)\n",
+    "    else:\n",
+    "        raise TypeError(f\"Unsupported type: {type(a)}. Expected Matrix or Array.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "b42d1240",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "'Matr A = \\\\left[\\\\begin{matrix}1908.0 & 1900.0 & 1900.0\\\\\\\\1900.95 & 1907.046 & 1900.0\\\\\\\\1899.05 & 1900.0 & 1908.954\\\\end{matrix}\\\\right]'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1908.0 & 1900.0 & 1900.0\\\\1900.95 & 1907.046 & 1900.0\\\\1899.05 & 1900.0 & 1908.954\\end{matrix}\\right]$"
+       "$\\displaystyle Matr A = \\left[\\begin{matrix}1908.0 & 1900.0 & 1900.0\\\\1900.95 & 1907.046 & 1900.0\\\\1899.05 & 1900.0 & 1908.954\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -78,7 +97,7 @@
     "\n",
     "B = sp.Array([200*(3+1.5*N+alpha), 200*(3+1.5*N+alpha), 200*(3+1.5*N+alpha)])\n",
     "\n",
-    "showLatex(A)\n",
+    "showLatex(A, True, strBeforeEq='Matr A = ')\n",
     "A_obr = A.inv()\n",
     "showLatex(A_obr)"
    ]
@@ -98,7 +117,7 @@
     }
    ],
    "source": [
-    "print(calculateNormMatr(A))"
+    "print(calculateChebyshevsNorm(A))"
    ]
   }
  ],
