--- a/dz1/task1.ipynb
+++ b/dz1/task1.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "id": "ed26364c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sympy as sp\n",
     "from IPython.display import display, Math\n",
-    "from typing import overload, Union"
+    "from typing import overload, Union\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "d44aed41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def showLatex(a, makeLatexCodeVisible = False, strBeforeEq = ''):\n",
+    "def showLatex(a, strBeforeEq = '', makeLatexCodeVisible = False):\n",
     "    if makeLatexCodeVisible:\n",
     "        display(strBeforeEq + sp.latex(a))\n",
     "    display(Math(fr'{strBeforeEq}{sp.latex(a)}'))\n",
@@ -40,30 +41,24 @@
     "            sums.append(row_sum)\n",
     "        return max(sums)\n",
     "    elif isinstance(a, sp.Array):\n",
-    "        return max(a)\n",
+    "        maxi = 0\n",
+    "        for i in a:\n",
+    "            maxi = max(maxi, abs(i))\n",
+    "        return maxi\n",
     "    else:\n",
     "        raise TypeError(f\"Unsupported type: {type(a)}. Expected Matrix or Array.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "id": "b42d1240",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "'Matr A = \\\\left[\\\\begin{matrix}1908.0 & 1900.0 & 1900.0\\\\\\\\1900.95 & 1907.046 & 1900.0\\\\\\\\1899.05 & 1900.0 & 1908.954\\\\end{matrix}\\\\right]'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "text/latex": [
-       "$\\displaystyle Matr A = \\left[\\begin{matrix}1908.0 & 1900.0 & 1900.0\\\\1900.95 & 1907.046 & 1900.0\\\\1899.05 & 1900.0 & 1908.954\\end{matrix}\\right]$"
+       "$\\displaystyle A = \\left[\\begin{matrix}1908.0 & 1900.0 & 1900.0\\\\1900.95 & 1907.046 & 1900.0\\\\1899.05 & 1900.0 & 1908.954\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -75,7 +70,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}0.0845887819338424 & -0.0472399588159809 & -0.0371736374600629\\\\-0.05728769335317 & 0.0946577193226455 & -0.0371947408591319\\\\-0.0271309360835517 & -0.0472188554169131 & 0.074524898897974\\end{matrix}\\right]$"
+       "$\\displaystyle b = \\left[\\begin{matrix}5708.0\\\\5708.0\\\\5708.0\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -95,29 +90,124 @@
     "    [199.9*(1+0.5*N), 200*(1+0.5*N), 200.1*(1+0.5*N+alpha)]\n",
     "])\n",
     "\n",
-    "B = sp.Array([200*(3+1.5*N+alpha), 200*(3+1.5*N+alpha), 200*(3+1.5*N+alpha)])\n",
+    "B = sp.Matrix([200*(3+1.5*N+alpha), 200*(3+1.5*N+alpha), 200*(3+1.5*N+alpha)])\n",
     "\n",
-    "showLatex(A, True, strBeforeEq='Matr A = ')\n",
-    "A_obr = A.inv()\n",
-    "showLatex(A_obr)"
+    "showLatex(A, \"A = \")\n",
+    "showLatex(B, \"b = \")\n",
+    "# A_obr = A.inv()\n",
+    "# showLatex(A_obr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "b83cda1a",
+   "execution_count": 71,
+   "id": "63ad3a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle A^{-1} = \\left[\\begin{matrix}0.08459 & -0.04724 & -0.03717\\\\-0.05729 & 0.09466 & -0.03719\\\\-0.02713 & -0.04722 & 0.07452\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cond A =  1079.61370211792\n"
+     ]
+    }
+   ],
+   "source": [
+    "# определим число обусловленности матрицы A\n",
+    "A_obr = A.inv()\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        A_obr[i, j] = A_obr[i, j].round(5)\n",
+    "showLatex(A_obr, \"A^{-1} = \")\n",
+    "\n",
+    "cond_A = calculateChebyshevsNorm(A)*calculateChebyshevsNorm(A_obr)\n",
+    "print(\"cond A = \", cond_A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "b6d2d828",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x = \\left[\\begin{matrix}1.02884\\\\1.02611\\\\0.97032\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\Delta x = \\left[\\begin{matrix}5.40318\\\\-10.7961\\\\5.40036\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def MultMatrOnVec(a: sp.Matrix, b: sp.Matrix):\n",
+    "    rez = [0, 0, 0]\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            rez[i] += a[i, j]*b[j]\n",
+    "    return sp.Matrix(rez)\n",
+    "\n",
+    "x = MultMatrOnVec(A_obr, B)\n",
+    "for i in range(3):\n",
+    "    x[i] = x[i].round(5)\n",
+    "showLatex(x, strBeforeEq=\"x = \")\n",
+    "\n",
+    "delta_B = sp.Matrix([200*(3+1.5*N+alpha)*0.01, -200*(3+1.5*N+alpha)*0.01, 200*(3+1.5*N+alpha)*0.01])\n",
+    "delta_x = MultMatrOnVec(A_obr, delta_B)\n",
+    "for i in range(3):\n",
+    "    delta_x[i] = delta_x[i].round(5)\n",
+    "showLatex(delta_x, \"\\Delta x = \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "164ef3bf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5708.00400000000\n"
+      "10.49347\n",
+      "10.7961370211792\n"
      ]
     }
    ],
    "source": [
-    "print(calculateChebyshevsNorm(A))"
+    "#Проверим выполнение неравенства\n",
+    "\n",
+    "print(calculateChebyshevsNorm(delta_x)/calculateChebyshevsNorm(x))\n",
+    "print(cond_A*calculateChebyshevsNorm(delta_B)/calculateChebyshevsNorm(B))\n",
+    "#неравентсво выполняется"
    ]
   }
  ],
